[project]
name = "apds-pusher"
description = "Application to enable files to be sent to the Archive API"
url = "https://www.bodc.ac.uk"
author = "British Oceanographic Data Centre (BODC)"
author_email = "enquiries@bodc.ac.uk"
classifiers = [
"Development Status :: 1 - Planning",
"Programming Language :: Python",
"Programming Language :: Python :: 3 :: Only",
"Topic :: Scientific/Engineering",
"Operating System :: OS Independent",
]

[project.scripts]
bodc-archive-pusher = "apds_pusher.__main__:pusher_group"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"


[tool.poetry]
version = "0.0.0" 
name = "apds-pusher"
description = "Allows organisations to continuously push data to the BODC archive from the command line"
authors = ["British Oceanographic Data Centre (BODC) <enquiries@bodc.ac.uk>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.10"
poetry-dynamic-versioning = "^1.1.0"
importlib-metadata = "7.2.1"


# Define the dependencies for building.
responses = "^0.25.7"
requests = "^2.32.3"
polling2 = "^0.5.0"
click = "^8.1.8"
[tool.poetry.group.build]
optional = true

[tool.poetry.group.build.dependencies]
twine = "^4.0.2"
importlib-metadata = "7.2.1"


# Define the dependencies for Linting.
[tool.poetry.group.lint]
optional = true

[tool.poetry.group.lint.dependencies]
ruff = "^0.4.2"


# Define the dependencies for Testing.
[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^7.3.0"
pytest-cov = "^4.0.0"
coverage = {extras = ["xml"], version = "^7.2.5"}

[tool.coverage.paths]
source = [ "apds-pusher", "**/apds-pusher",]

[tool.setuptools.packages.find]
namespaces = false



